[metadata]
name = tomogram_shift_alignment
url = https://github.com/EuanPyle/tomogram_shift_alignment
author = Euan Pyle
description =  Program to compare the shifts between two of the same tomogram which were constructed by different TSA methods, and to adjust the particle coordinates of a star file to fit the new tomogram. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/EuanPyle/tomogram_shift_alignment

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    starfile
    pandas
    thefuzz
    setuptools-scm
    typer
    mrcfile

[options.entry_points]
console_scripts =
    tomogram_shift_alignment = tomogram_shift_alignment.tomogram_shift_alignment:cli

[bdist_wheel]
universal = 1
